--- a/src/update3/org/cict/my_account/MyAccountHome.fxml
+++ b/src/update3/org/cict/my_account/MyAccountHome.fxml
@@ -134,7 +134,7 @@
             </VBox>
             <StackPane HBox.hgrow="ALWAYS">
                <children>
-                  <VBox fx:id="vbox_access" prefHeight="200.0" prefWidth="100.0">
+                  <VBox fx:id="vbox_access" prefHeight="200.0" prefWidth="100.0" visible="false">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -514,7 +514,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_change_question" prefHeight="200.0" prefWidth="100.0" visible="false">
+                  <VBox fx:id="vbox_change_question" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -559,7 +559,7 @@
                                           <Insets />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label prefWidth="150.0" text="New PIN">
+                                    <Label prefWidth="150.0" text="Security Question">
                                        <font>
                                           <Font size="17.0" />
                                        </font>
@@ -577,12 +577,12 @@
                                           <Insets />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label prefWidth="150.0" text="New PIN">
+                                    <Label prefWidth="150.0" text="Security Answer">
                                        <font>
                                           <Font size="17.0" />
                                        </font>
                                     </Label>
-                                    <PasswordField prefWidth="200.0" promptText="New PIN">
+                                    <PasswordField prefWidth="200.0" promptText="Security Answer">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -599,12 +599,12 @@
                                           <Insets />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label prefWidth="150.0" text="Confirm PIN">
+                                    <Label prefWidth="150.0" text="Confirm Answer">
                                        <font>
                                           <Font size="17.0" />
                                        </font>
                                     </Label>
-                                    <PasswordField prefWidth="200.0" promptText="Confirm PIN">
+                                    <PasswordField prefWidth="200.0" promptText="Confirm Answer">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
