--- a/src/update3/org/cict/my_account/MyAccountHome.fxml
+++ b/src/update3/org/cict/my_account/MyAccountHome.fxml
@@ -288,7 +288,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_change_password" prefHeight="200.0" prefWidth="100.0" visible="false">
+                  <VBox fx:id="vbox_change_password" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -321,7 +321,7 @@
                                           <Font size="17.0" />
                                        </font>
                                     </Label>
-                                    <PasswordField fx:id="txt_cp_current" prefWidth="200.0" promptText="Current Password">
+                                    <PasswordField fx:id="txt_cp_current" accessibleHelp="Current Password" prefWidth="200.0" promptText="Current Password">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -343,7 +343,7 @@
                                           <Font size="17.0" />
                                        </font>
                                     </Label>
-                                    <PasswordField fx:id="txt_cp_new" prefWidth="200.0" promptText="New Password">
+                                    <PasswordField fx:id="txt_cp_new" accessibleHelp="New Password" prefWidth="200.0" promptText="New Password">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -365,7 +365,7 @@
                                           <Font size="17.0" />
                                        </font>
                                     </Label>
-                                    <PasswordField fx:id="txt_cp_confirm" prefWidth="200.0" promptText="Confirm Password">
+                                    <PasswordField fx:id="txt_cp_confirm" accessibleHelp="Confirm Password" prefWidth="200.0" promptText="Confirm Password">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -517,7 +517,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_change_question" prefHeight="200.0" prefWidth="100.0">
+                  <VBox fx:id="vbox_change_question" prefHeight="200.0" prefWidth="100.0" visible="false">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
