--- a/src/update3/org/cict/my_account/MyAccountHome.fxml
+++ b/src/update3/org/cict/my_account/MyAccountHome.fxml
@@ -288,7 +288,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_change_password" prefHeight="200.0" prefWidth="100.0">
+                  <VBox fx:id="vbox_change_password" prefHeight="200.0" prefWidth="100.0" visible="false">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -517,7 +517,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_change_question" prefHeight="200.0" prefWidth="100.0" visible="false">
+                  <VBox fx:id="vbox_change_question" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -545,7 +545,7 @@
                                           <Insets />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label prefHeight="26.0" text="Chaning your Security Question requires your current password. not your old security answer">
+                                    <Label prefHeight="26.0" text="Changing your Security Question requires your current password.">
                                        <font>
                                           <Font size="17.0" />
                                        </font>
